out_ci.bak_20251221_185739/bundle.nodecheck.err
/home/test/Data/SECURITY_BUNDLE/ui/static/js/vsp_bundle_commercial_v1.js:1393
  }
  ^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.11.0
